libs/parser/testdata/errors/unicode_context.csl
my-section:
	key: 'value'
	unicode: 'Hello 世界 test'
	another: 'ok'
